tests/errors/syntax/then_instead_of_do_for.odl
main :: () -> void {
    for x := 0; x < 10; ++i then 0;
};